--- a/Data.ipynb
+++ b/Data.ipynb
@@ -28,11 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test\n",
+      "Nothing\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Test')"
+    "print('Test')\n",
+    "print('Nothing')"
    ]
   }
  ],
